# percona-server

./: .bzrignore  .cirrus.yml  .cirun.yml  .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  COPYING.innodb_fast_shutdown  COPYING.mysql-syslog.patch  COPYING.show_temp_51  ChangeLog  INSTALL-SOURCE  INSTALL-WIN-SOURCE  LICENSE  MYSQL_VERSION  Makefile  Makefile-ps  Makefile.am  Makefile.in  README  README.HandlerSocket  README.MySQL  README.md  README_tokudb_backup  VERSION  aclocal.m4  apply_patches  auth_pam.c  autogen.sh  azure-pipelines.yml  bootstrap  bootstrap.sh  bug580324.patch  bug677407.patch  bug813587.patch  (+121 more)
UDF/: Makefile.am  configure.ac
UDF/src/: Makefile.am  fnv_udf.cc  murmur_udf.cc
client/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  client_priv.h  hslongrun.cpp  hstest.cpp  hstest.pl  infix_ostream_it.h  logger.cc  mysql.cc  mysql_plugin.c  mysql_upgrade.c  mysqladmin.cc  mysqlbinlog.cc  mysqlcheck.c  mysqldump.c  mysqldump.cc  mysqlslap.c  mysqlslap.cc  mysqltest.cc  readline.cc  sql_string.cc  sql_string.h
client/base/: CMakeLists.txt
client/dump/: CMakeLists.txt  program.cc  sql_formatter.cc  sql_formatter_options.h
client/include/: client_priv.h
client/migrate_keyring/: CMakeLists.txt
client/mysqltest/: logfile.h
components/binlog_utils_udf/: CMakeLists.txt  binlog_utils_udf.cc
components/js_lang/: CMakeLists.txt  README.md  component.cc  js_lang_common.h  js_lang_core.cc  js_lang_core.h  js_lang_param.cc
components/masking_functions/: AUTHORS  CMakeLists.txt  README  differences
components/masking_functions/include/: component.h
components/percona_telemetry/: CMakeLists.txt  README.md  common.h  component.cc  config.cc  config.h  data_provider.cc  data_provider.h  logger.cc  logger.h  percona_telemetry_component.cc  percona_telemetry_component.h  storage.cc  storage.h  worker.cc  worker.h
components/uuid_vx_udf/: CMakeLists.txt  uuid_vx_udf_component.cc
extra/opensslpp/: CMakeLists.txt
handlersocket/: Makefile  Makefile.am  Makefile.in  copy_hdrs.sh  database.cpp  database.hpp  get_mysql_version.sh  handlersocket.cpp  handlersocket.spec  handlersocket.spec.template  hstcpsvr.cpp  hstcpsvr.hpp  hstcpsvr_worker.cpp  mysql_incl.hpp
plugin/HandlerSocket-Plugin-for-MySQL/: .gitignore  CMakeLists.txt  ChangeLog  README  configure.ac
plugin/audit_log_filter/: CMakeLists.txt  audit_action.h  audit_base_component.h  audit_base_mediator.h  audit_encryption.cc  audit_encryption.h  audit_error_log.h  audit_event_class_internal.h  audit_filter.cc  audit_filter.h  audit_keyring.cc  audit_keyring.h  audit_log_filter.cc  audit_log_filter.h  audit_log_filter_linux_install.sql  audit_log_json_handler.cc  audit_log_json_handler.h  audit_log_reader.cc  audit_log_reader.h  audit_psi_info.cc  audit_psi_info.h  audit_record.cc  audit_record.h  audit_rule.cc  audit_rule.h  audit_rule_parser.cc  audit_rule_parser.h  audit_rule_registry.cc  audit_rule_registry.h  audit_udf.cc  audit_udf.h  component_registry_service.cc  component_registry_service.h  event_filter_function.cc  event_filter_function.h  log_record_formatter.cc  log_record_formatter.h  log_writer.cc  log_writer.h  log_writer_strategy.cc  (+11 more)
plugin/auth_ldap/: AUTHORS  CMakeLists.txt  README.md  readme_sasl.txt
plugin/auth_ldap/src/: pool.cc  (+6 more)
plugin/data_masking/: AUTHORS  CMakeLists.txt  data_masking.ini
plugin/keyring_vault/: CMakeLists.txt  i_vault_curl.h  i_vault_io.h  i_vault_parser.h  i_vault_parser_composer.h  vault_base64.cc  vault_base64.h  vault_credentials.cc  vault_credentials.h  vault_credentials_parser.cc  vault_credentials_parser.h  vault_curl.cc  vault_curl.h  vault_io.cc  vault_io.h  vault_key.cc  vault_key.h  vault_key_serializer.h  vault_keyring.cc  vault_keys_container.cc  vault_keys_container.h  vault_keys_list.cc  vault_keys_list.h  vault_memory.h  vault_parser.cc  vault_parser.h  vault_parser_composer.cc  vault_parser_composer.h  vault_secure_string.h
plugin/percona-pam-for-mysql/: CMakeLists.txt  Makefile.am  README  bootstrap  configure.ac
plugin/s2_query_rewriter/: BUILD  CMakeLists.txt  TODO_LIMITATIONS.txt  TROUBLE-SHOOTING.txt  plugin.cc  region_cover.cc  region_cover.h
plugin/s2_udf/: CMakeLists.txt  s2  s2_mysql_udf.cc
plugin/tokudb-backup-plugin/: CMakeLists.txt  README.md  README_tokudb_backup  tokudb_backup.cc
storage/rocksdb/: .clang-format  CMakeLists.txt  README  aes_ctr_stream_factory.cc  aes_ctr_stream_factory.h  cipher_stream_factory.h  enc_aes_ctr_encryption_provider.cc  enc_aes_ctr_encryption_provider.h  enc_aes_ctr_stream_factory.cc  enc_aes_ctr_stream_factory.h  enc_cipher_stream_factory.h  enc_env_encryption_myrocks.cc  enc_env_encryption_myrocks.h  enc_info_plainfile_storage.cc  enc_info_plainfile_storage.h  enc_info_storage.h  enc_keyring_master_key_manager.cc  enc_keyring_master_key_manager.h  enc_master_key_manager.h  enc_stream_cipher.cc  enc_stream_cipher.h  enc_uuid_provider.cc  enc_uuid_provider.h  env_encryption_ctr_aes.cc  env_encryption_ctr_aes.h  env_encryption_myrocks.cc  event_listener.cc  get_rocksdb_files.sh  ha_rocksdb.cc  ha_rocksdb.h  ha_rocksdb_proto.h  ha_rockspart.cc  ha_rockspart.h  ib_ut0counter.h  keyring_master_key_manager.cc  keyring_master_key_manager.h  logger.h  master_key_manager.cc  properties_collector.cc  properties_collector.h  (+34 more)
storage/tokudb/: CMakeLists.txt  ha_tokudb.cc  ha_tokudb.h  ha_tokudb_admin.cc  ha_tokudb_alter.cc  ha_tokudb_alter_56.cc  ha_tokudb_alter_common.cc  ha_tokudb_mrr_mysql.cc  ha_tokudb_update.cc  ha_tokupart.cc  ha_tokupart.h  hatoku_cmp.cc  hatoku_cmp.h  hatoku_defines.h  hatoku_hton.cc  hatoku_hton.h  partition_base.cc  partition_base.h  tokudb_background.cc  tokudb_background.h  tokudb_buffer.h  tokudb_card.h  tokudb_debug.h  tokudb_dir_cmd.cc  tokudb_dir_cmd.h  tokudb_information_schema.cc  tokudb_information_schema.h  tokudb_math.h  tokudb_memory.h  tokudb_status.h  tokudb_sysvars.cc  tokudb_sysvars.h  tokudb_thread.cc  tokudb_thread.h  tokudb_time.h  tokudb_txn.h  tokudb_update_fun.cc  tokudb_vlq.h
(+12552 files in other folders)
