IF(DEFINED TOKUDB_BACKUP_PLUGIN_VERSION)
    ADD_DEFINITIONS("-DTOKUDB_BACKUP_PLUGIN_VERSION=${TOKUDB_BACKUP_PLUGIN_VERSION}")
    IF (${TOKUDB_BACKUP_PLUGIN_VERSION} MATCHES "^tokudb-backup-([0-9]+)\\.([0-9]+)")
        ADD_DEFINITIONS("-DTOKUDB_BACKUP_PLUGIN_VERSION_MAJOR=${CMAKE_MATCH_1}")
        ADD_DEFINITIONS("-DTOKUDB_BACKUP_PLUGIN_VERSION_MINOR=${CMAKE_MATCH_2}")
    ENDIF()
ENDIF()
SET(TOKUBACKUP_SOURCES tokubackup.cc)
ADD_SUBDIRECTORY(backup)
INCLUDE_DIRECTORIES(backup)
MYSQL_ADD_PLUGIN(tokubackup ${TOKUBACKUP_SOURCES} MODULE_ONLY MODULE_OUTPUT_NAME "tokubackup")
