# Copyright (c) 2000, 2012, Oracle and/or its affiliates. All rights reserved.
# 
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; version 2 of the License.
# 
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
# 
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA

# Process this file with automake to create Makefile.in

AUTOMAKE_OPTIONS =	foreign

HANDLERSOCKET_EXTRA_DIST = \
	storage/HandlerSocket-Plugin-for-MySQL/AUTHORS \
	storage/HandlerSocket-Plugin-for-MySQL/autogen.sh \
	storage/HandlerSocket-Plugin-for-MySQL/ChangeLog \
	storage/HandlerSocket-Plugin-for-MySQL/COPYING \
	storage/HandlerSocket-Plugin-for-MySQL/Makefile.am \
	storage/HandlerSocket-Plugin-for-MySQL/README \
	storage/HandlerSocket-Plugin-for-MySQL/client/hsclient.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/client/hslongrun.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/client/hspool_test.pl \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest.pl \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest_hs.sh \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest_hs_more50.sh \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest_md.sh \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest_my.sh \
	storage/HandlerSocket-Plugin-for-MySQL/client/hstest_my_more50.sh \
	storage/HandlerSocket-Plugin-for-MySQL/client/Makefile.am \
	storage/HandlerSocket-Plugin-for-MySQL/docs-en/about-handlersocket.en.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-en/configuration-options.en.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-en/installation.en.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-en/perl-client.en.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-en/protocol.en.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-ja/about-handlersocket.ja.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-ja/installation.ja.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-ja/perl-client.ja.txt \
	storage/HandlerSocket-Plugin-for-MySQL/docs-ja/protocol.ja.txt \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/COPYRIGHT.txt \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/database.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/database.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/handlersocket.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/handlersocket.spec.template \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/hstcpsvr.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/hstcpsvr.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/hstcpsvr_worker.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/hstcpsvr_worker.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/Makefile.am \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/Makefile.plain.template \
	storage/HandlerSocket-Plugin-for-MySQL/handlersocket/mysql_incl.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/allocator.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/auto_addrinfo.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/auto_file.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/auto_ptrcontainer.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/config.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/config.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/COPYRIGHT.txt \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/escape.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/escape.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/fatal.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/fatal.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/hstcpcli.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/hstcpcli.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/libhsclient.spec.template \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/Makefile.am \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/Makefile.plain \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/mutex.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/socket.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/socket.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/string_buffer.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/string_ref.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/string_util.cpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/string_util.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/thread.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/libhsclient/util.hpp \
	storage/HandlerSocket-Plugin-for-MySQL/misc/microbench-hs.log \
	storage/HandlerSocket-Plugin-for-MySQL/misc/microbench-my.log \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/Changes \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/COPYRIGHT.txt \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/HandlerSocket.xs \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/Makefile.PL \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/Makefile.PL.installed \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/MANIFEST \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/perl-Net-HandlerSocket.spec.template \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/ppport.h \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/README \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/lib/Net/HandlerSocket.pm \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/lib/Net/HandlerSocket/Pool.pm \
	storage/HandlerSocket-Plugin-for-MySQL/perl-Net-HandlerSocket/t/Net-HandlerSocket.t \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/Makefile \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/common/binary_my.cnf \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/common/compat.sh \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/common/hstest.pm \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/Makefile \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/run.sh \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test01.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test01.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test02.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test02.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test03.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test03.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test04.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test04.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test05.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test05.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test06.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test06.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test07.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test07.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test08.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test08.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test09.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test09.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test10.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test10.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test11.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test11.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test12.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test12.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test13.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test13.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test14.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test14.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test15.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test15.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test16.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test16.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test17.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test17.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test18.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test18.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test19.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test19.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test20.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test20.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test21.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test21.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test22.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test22.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test23.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test23.pl \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test24.expected \
	storage/HandlerSocket-Plugin-for-MySQL/regtest/test_01_lib/test24.pl \
	storage/HandlerSocket-Plugin-for-MySQL/configure.ac

UDF_EXTRA_DIST = \
	UDF/Makefile.am \
	UDF/src/fnv1a_udf.cc \
	UDF/src/fnv_udf.cc \
	UDF/src/Makefile.am \
	UDF/src/murmur_udf.cc \
	UDF/configure.ac

BUILD_PS_EXTRA_DIST = \
	build-ps/build-dpkg.sh \
	build-ps/build-rpm.sh \
	build-ps/build-shared-compat-rpm.sh \
	build-ps/README-solaris \
	build-ps/README-windows \
	build-ps/debian/changelog \
	build-ps/debian/compat \
	build-ps/debian/copyright \
	build-ps/debian/libperconaserverclient16-dev.docs \
	build-ps/debian/libperconaserverclient16.docs \
	build-ps/debian/libperconaserverclient16.dirs \
	build-ps/debian/libperconaserverclient16.files \
	build-ps/debian/libperconaserverclient16.postinst \
	build-ps/debian/libperconaserverclient16-dev.dirs \
	build-ps/debian/libperconaserverclient16-dev.examples \
	build-ps/debian/libperconaserverclient16-dev.files \
	build-ps/debian/libperconaserverclient16-dev.links \
	build-ps/debian/libperconaserverclient16-dev.README.Maintainer \
	build-ps/debian/percona-server-server-5.1.docs \
	build-ps/debian/percona-server-client-5.1.README.Debian \
	build-ps/debian/percona-server-client-5.1.dirs \
	build-ps/debian/percona-server-client-5.1.docs \
	build-ps/debian/percona-server-client-5.1.files \
	build-ps/debian/percona-server-client-5.1.links \
	build-ps/debian/percona-server-client-5.1.lintian-overrides \
	build-ps/debian/percona-server-client-5.1.menu \
	build-ps/debian/percona-server-common-5.1.dirs \
	build-ps/debian/percona-server-common-5.1.files \
	build-ps/debian/percona-server-common-5.1.lintian-overrides \
	build-ps/debian/percona-server-common-5.1.postrm \
	build-ps/debian/percona-server-server-5.1.NEWS \
	build-ps/debian/percona-server-server-5.1.README.Debian \
	build-ps/debian/percona-server-server-5.1.config \
	build-ps/debian/percona-server-server-5.1.dirs \
	build-ps/debian/percona-server-server-5.1.files \
	build-ps/debian/percona-server-server-5.1.links \
	build-ps/debian/percona-server-server-5.1.lintian-overrides \
	build-ps/debian/percona-server-server-5.1.logcheck.ignore.paranoid \
	build-ps/debian/percona-server-server-5.1.logcheck.ignore.server \
	build-ps/debian/percona-server-server-5.1.logcheck.ignore.workstation \
	build-ps/debian/percona-server-server-5.1.mysql.init \
	build-ps/debian/percona-server-server-5.1.percona-xtradb-server.logrotate \
	build-ps/debian/percona-server-server-5.1.postinst \
	build-ps/debian/percona-server-server-5.1.postrm \
	build-ps/debian/percona-server-server-5.1.preinst \
	build-ps/debian/percona-server-server-5.1.prerm \
	build-ps/debian/percona-server-server-5.1.templates \
	build-ps/debian/README.Maintainer \
	build-ps/debian/source.lintian-overrides \
	build-ps/debian/watch \
	build-ps/debian/additions/debian-start \
	build-ps/debian/additions/debian-start.inc.sh \
	build-ps/debian/additions/Docs__Images__Makefile.in \
	build-ps/debian/additions/Docs__Makefile.in \
	build-ps/debian/additions/echo_stderr \
	build-ps/debian/additions/msql2mysql.1 \
	build-ps/debian/additions/my.cnf \
	build-ps/debian/additions/my_print_defaults.1 \
	build-ps/debian/additions/myisam_ftdump.1 \
	build-ps/debian/additions/myisamchk.1 \
	build-ps/debian/additions/myisamlog.1 \
	build-ps/debian/additions/myisampack.1 \
	build-ps/debian/additions/mysql_config.1 \
	build-ps/debian/additions/mysql_convert_table_format.1 \
	build-ps/debian/additions/mysql_find_rows.1 \
	build-ps/debian/additions/mysql_fix_extensions.1 \
	build-ps/debian/additions/mysql_install_db.1 \
	build-ps/debian/additions/mysql_secure_installation.1 \
	build-ps/debian/additions/mysql_setpermission.1 \
	build-ps/debian/additions/mysql_tableinfo.1 \
	build-ps/debian/additions/mysql_waitpid.1 \
	build-ps/debian/additions/mysqlbinlog.1 \
	build-ps/debian/additions/mysqlbug.1 \
	build-ps/debian/additions/mysqlcheck.1 \
	build-ps/debian/additions/mysqld_safe_syslog.cnf \
	build-ps/debian/additions/mysqldumpslow.1 \
	build-ps/debian/additions/mysqlimport.1 \
	build-ps/debian/additions/mysqlmanager.1 \
	build-ps/debian/additions/mysqlreport \
	build-ps/debian/additions/mysqlreport.1 \
	build-ps/debian/additions/mysql-server.lintian-overrides \
	build-ps/debian/additions/mysqltest.1 \
	build-ps/debian/additions/pack_isam.1 \
	build-ps/debian/additions/resolve_stack_dump.1 \
	build-ps/debian/additions/resolveip.1 \
	build-ps/debian/patches/00list \
	build-ps/debian/patches/01_MAKEFILES__Docs_Images_Makefile.in.dpatch \
	build-ps/debian/patches/01_MAKEFILES__Docs_Makefile.in.dpatch \
	build-ps/debian/patches/33_scripts__mysql_create_system_tables__no_test.dpatch \
	build-ps/debian/patches/38_scripts__mysqld_safe.sh__signals.dpatch \
	build-ps/debian/patches/41_scripts__mysql_install_db.sh__no_test.dpatch \
	build-ps/debian/patches/44_scripts__mysql_config__libs.dpatch \
	build-ps/debian/patches/50_mysql-test__db_test.dpatch \
	build-ps/debian/patches/60_usr_share_mysql_mysql_test.dpatch \
	build-ps/debian/po/ar.po \
	build-ps/debian/po/ca.po \
	build-ps/debian/po/cs.po \
	build-ps/debian/po/da.po \
	build-ps/debian/po/de.po \
	build-ps/debian/po/es.po \
	build-ps/debian/po/eu.po \
	build-ps/debian/po/fr.po \
	build-ps/debian/po/gl.po \
	build-ps/debian/po/it.po \
	build-ps/debian/po/ja.po \
	build-ps/debian/po/nb.po \
	build-ps/debian/po/nl.po \
	build-ps/debian/po/POTFILES.in \
	build-ps/debian/po/pt.po \
	build-ps/debian/po/pt_BR.po \
	build-ps/debian/po/ro.po \
	build-ps/debian/po/ru.po \
	build-ps/debian/po/sv.po \
	build-ps/debian/po/templates.pot \
	build-ps/debian/po/tr.po \
	build-ps/debian/control \
	build-ps/debian/rules \
	build-ps/debian/source/format \
	build-ps/percona-server.spec \
	build-ps/percona-shared-compat.spec \
	build-ps/build-binary.sh

# These are built from source in the Docs directory
EXTRA_DIST =		INSTALL-SOURCE INSTALL-WIN-SOURCE \
			README.MySQL COPYING CMakeLists.txt \
			COPYING.innodb_fast_shutdown \
			COPYING.show_temp_51 \
			README \
			README.HandlerSocket \
			Makefile-ps \
			$(HANDLERSOCKET_EXTRA_DIST) \
			$(UDF_EXTRA_DIST) \
			$(BUILD_PS_EXTRA_DIST)


SUBDIRS =		. include @docs_dirs@ @zlib_dir@ \
			@readline_topdir@ sql-common scripts \
			@sql_union_dirs@ unittest \
			@sql_server@ @man_dirs@ tests \
			netware @libmysqld_dirs@ \
			mysql-test support-files sql-bench @tools_dirs@ \
			win

DIST_SUBDIRS =		. include Docs zlib \
			cmd-line-utils sql-common scripts \
			strings mysys dbug extra regex libmysql libmysql_r client unittest storage plugin \
			vio sql man tests \
			netware libmysqld \
			mysql-test support-files sql-bench server-tools \
			win \
			BUILD
DISTCLEANFILES = ac_available_languages_fragment

# Create permission databases
init-db:		all
	$(top_builddir)/scripts/mysql_install_db

bin-dist:		all
	$(top_builddir)/scripts/make_binary_distribution @MAKE_BINARY_DISTRIBUTION_OPTIONS@

# Remove BK's "SCCS" subdirectories from source distribution
# Create initial database files for Windows installations and check them.
dist-hook:
	rm -rf `find $(distdir) -type d -name SCCS -print`
	mkdir -p $(distdir)/win
	scripts/mysql_install_db --no-defaults --cross-bootstrap \
		--builddir=$(top_builddir) \
		--datadir=$(distdir)/win/data \
		--srcdir=$(top_srcdir)
	storage/myisam/myisamchk --silent --fast $(distdir)/win/data/mysql/*.MYI

all-local:		@ABI_CHECK@	

tags:
	support-files/build-tags

.PHONY:	init-db bin-dist \
  test    test-force    test-full    test-force-full    test-force-mem \
  test-pl test-force-pl test-full-pl test-force-full-pl test-force-pl-mem \
  test-unit test-ps test-nr test-pr test-ns test-binlog-statement \
  test-ext-funcs test-ext-rpl test-ext-partitions test-ext-jp \
  test-ext-stress test-ext test-embedded test-reprepare \
  test-fast test-fast-cursor test-fast-view test-fast-prepare \
  test-full-qa

# Target 'test' will run the regression test suite using the built server.
#
# If you are running in a shared environment, users can avoid clashing
# port numbers by setting individual small numbers 1-100 to the
# environment variable MTR_BUILD_THREAD. The script "mysql-test-run"
# will then calculate the various port numbers it needs from this,
# making sure each user use different ports.

test-unit:
	cd unittest && $(MAKE) test

test-ps:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) --ps-protocol --mysqld=--binlog-format=mixed

test-nr:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) --mysqld=--binlog-format=row

test-pr:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) $(mem) --ps-protocol --mysqld=--binlog-format=row

test-ns:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) $(mem) --mysqld=--binlog-format=mixed

test-binlog-statement:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) --mysqld=--binlog-format=statement

# This code is duplicated in "test-bt", see the Changeset comment of 2007-Dec-07
test-embedded:
	if [ -e bin/mysqltest_embedded -o -e libmysqld/examples/mysqltest_embedded ] ; then \
	  cd mysql-test ; MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=embedded --force --timer \
	          --embedded-server --skip-rpl --skip-ndbcluster ; \
	else \
	  echo "no program found for 'embedded' tests - skipped testing" ; \
	fi

test-reprepare:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(force) $(mem) --ps-protocol \
		--mysqld=--debug=+d,reprepare_each_statement

test:	test-unit test-ns test-pr

smoke:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --do-test=s

test-full:	test test-nr test-ps

test-force:
	$(MAKE) force=--force test

test-force-full:
	$(MAKE) force=--force test-full

#used by autopush.pl to run memory based tests
test-force-mem:
	$(MAKE) force=--force mem=--mem test

test-bt:
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --comment=normal --force --timer \
	        --skip-ndbcluster --report-features
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl  --comment=ps    --force --timer \
	        --skip-ndbcluster --ps-protocol
	-if [ -e bin/ndbd -o -e storage/ndb/src/kernel/ndbd ] ; then \
	  cd mysql-test ; \
	    MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=ndb+ps --force --timer \
	          --ps-protocol --mysqld=--binlog-format=row --suite=ndb ; \
	    MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=ndb --force --timer \
	          --with-ndbcluster-only ; \
	else \
	  echo "no program found for 'ndbcluster' tests - skipped testing" ; \
	fi
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=funcs1+ps --ps-protocol --reorder --suite=funcs_1
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=funcs2 --suite=funcs_2
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=partitions --suite=parts
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=stress --suite=stress
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=jp --suite=jp
	-if [ -d mysql-test/suite/nist ] ; then \
	  cd mysql-test ; MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=nist --force --suite=nist ; \
	fi
	-if [ -d mysql-test/suite/nist ] ; then \
	  cd mysql-test ; MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=nist+ps --force --suite=nist --ps-protocol ; \
	fi
	-if [ -e bin/mysqltest_embedded -o -e libmysqld/examples/mysqltest_embedded ] ; then \
	  cd mysql-test ; MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=embedded --force --timer \
	          --embedded-server --skip-rpl --skip-ndbcluster ; \
	else \
	  echo "no program found for 'embedded' tests - skipped testing" ; \
	fi

test-bt-fast:
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl  --comment=ps    --force --timer \
	        --skip-ndbcluster --ps-protocol --report-features
	-if [ -e bin/ndbd -o -e storage/ndb/src/kernel/ndbd ] ; then \
	  cd mysql-test ; \
	    MTR_BUILD_THREAD=auto \
	      @PERL@ ./mysql-test-run.pl --comment=ndb --force --timer \
	          --with-ndbcluster-only ; \
	else \
	  echo "no program found for 'ndbcluster' tests - skipped testing" ; \
	fi
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --force --comment=stress --suite=stress

test-bt-debug:
	-cd mysql-test ; MTR_BUILD_THREAD=auto \
	    @PERL@ ./mysql-test-run.pl --comment=debug  --force --timer \
	        --skip-ndbcluster --skip-rpl --report-features

test-bt-debug-fast:

test-bt-debug-fast:

# Keep these for a while
test-pl:	test
test-full-pl:	test-full
test-force-pl:	test-force
test-force-pl-mem:  test-force-mem
test-force-full-pl: test-force-full

test-ext-funcs:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --force --reorder --suite=funcs_1 ; \
	    @PERL@ ./mysql-test-run.pl --force --suite=funcs_2

test-ext-rpl:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --force --suite=rpl

test-ext-partitions:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --force --suite=parts

test-ext-jp:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --force --suite=jp

test-ext-stress:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl --force --big-test --suite=stress

test-ext:	test-ext-funcs test-ext-rpl test-ext-partitions test-ext-jp test-ext-stress

test-fast:
	cd mysql-test ; \
	    @PERL@ ./mysql-test-run.pl $(subset) --force --skip-ndb --skip-innodb --skip-im --skip-rpl ; \
	    @PERL@ ./mysql-test-run.pl $(subset) --force --suite=funcs_1 --do-test=myisam ; \
	    @PERL@ ./mysql-test-run.pl $(subset) --force --suite=stress --do-test=ddl_myisam 

test-fast-view:
	$(MAKE) subset=--view-protocol test-fast

test-fast-cursor:
	$(MAKE) subset=--cursor-protocol test-fast

test-fast-prepare:
	$(MAKE) subset=--ps-protocol test-fast

test-full-qa:
	$(MAKE) force=--force test-pr \
	    test-binlog-statement test-ext test-fast-view \
	        test-fast-cursor test-unit

#
# Headers which need to be checked for abi/api compatibility.
# API_PREPROCESSOR_HEADER will be used until mysql_priv.h stablizes
# after which TEST_PREPROCESSOR_HEADER will be used.
#

API_PREPROCESSOR_HEADER = $(top_srcdir)/include/mysql/plugin.h \
                           $(top_srcdir)/include/mysql.h

TEST_PREPROCESSOR_HEADER = $(top_srcdir)/include/mysql/plugin.h \
                            $(top_srcdir)/sql/mysql_priv.h \
                            $(top_srcdir)/include/mysql.h

#
# Rules for checking that the abi/api has not changed.
#
# The following steps are followed in the do_abi_check rule below
#
# 1) Generate preprocessor output for the files that need to
#    be tested for abi/api changes. use -nostdinc to prevent
#    generation of preprocessor output for system headers. This
#    results in messages in stderr saying that these headers
#    were not found. Redirect the stderr output to /dev/null
#    to prevent seeing these messages.
# 2) sed the output to 
#    2.1) remove blank lines and lines that begin with "# "
#    2.2) When gcc -E is run on the Mac OS  and solaris sparc platforms it
#         introduces a line of output that shows up as a difference between
#         the .pp and .out files. Remove these OS specific preprocessor text
#         inserted by the preprocessor.
# 3) diff the generated file and the canons (.pp files already in
#    the repository).
# 4) delete the .out file that is generated.
#
# If the diff fails, the generated file is not removed. This will
# be useful for analysis of ABI differences (e.g. using a visual
# diff tool).
#
# A ABI change that causes a build to fail will always be accompanied
# by new canons (.out files). The .out files that are not removed will
# be replaced as the new .pp files.
#
# e.g. If include/mysql/plugin.h has an ABI change then this rule would
# leave a <build directory>/abi_check.out file.
#
# A developer with a justified API change will then do a
# mv <build directory>/abi_check.out include/mysql/plugin.pp 
# to replace the old canons with the new ones.
#

abi_check:	$(API_PREPROCESSOR_HEADER)
	$(MAKE) abi_headers="$^" do_abi_check

abi_check_all:	$(TEST_PREPROCESSOR_HEADER)
	$(MAKE) abi_headers="$^" do_abi_check

do_abi_check:
	set -ex; \
	for file in $(abi_headers); do \
	         @CC@ -E -nostdinc -dI -DMYSQL_ABI_CHECK \
	                  -I$(top_srcdir)/include \
	                  -I$(top_srcdir)/include/mysql \
	                  -I$(top_srcdir)/sql \
	                  -I$(top_builddir)/include \
	                  -I$(top_builddir)/include/mysql \
	                  -I$(top_builddir)/sql \
	                                 $$file 2>/dev/null | \
	                  @SED@ -e '/^# /d' \
	                            -e '/^[ 	]*$$/d' \
	                            -e '/^#pragma GCC set_debug_pwd/d' \
	                            -e '/^#ident/d' > \
	                                       $(top_builddir)/abi_check.out; \
	                  @DIFF@ -w $$file.pp $(top_builddir)/abi_check.out; \
	                  @RM@ $(top_builddir)/abi_check.out; \
	done

# Don't update the files from bitkeeper
%::SCCS/s.%
