lib_LTLIBRARIES = libfnv1a_udf.la libfnv_udf.la libmurmur_udf.la
libfnv1a_udf_la_SOURCES = fnv1a_udf.cc
libfnv_udf_la_SOURCES = fnv_udf.cc
libmurmur_udf_la_SOURCES = murmur_udf.cc
libfnv1a_udf_la_CPPFLAGS = -I$(includedir)
libfnv_udf_la_CPPFLAGS = -I$(includedir)
libmurmur_udf_la_CPPFLAGS = -I$(includedir)
